<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/r1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_tx"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/name"
                    android:textColor="#A1887F"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="300dp"
                    android:layout_height="91dp"
                    android:autofillHints="Name"
                    android:hint="@string/eg_sourabh"
                    android:inputType="text"
                    android:textColorHint="#8D6E63"
                    tools:ignore="TouchTargetSizeCheck"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/r2"
                android:layout_below="@+id/r1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_tx"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/email"
                    android:textColor="#A1887F"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Email Address"
                    android:hint="@string/eg_sourabh_gmail"
                    android:textColorHint="#8D6E63"
                    tools:ignore="TouchTargetSizeCheck"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/r3"
                android:layout_below="@+id/r2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_tx"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/gender"
                    android:textColor="#A1887F"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg_gender"
                    android:layout_marginStart="0dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_male"
                        android:text="@string/male"
                        android:checked="true"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rb_female"
                        android:text="@string/female"/>

                </RadioGroup>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/r4"
                android:layout_below="@+id/r3"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Tech_tx"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tech"
                    android:textColor="#A1887F"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ck1"
                    android:layout_marginStart="20dp"
                    android:text="@string/php"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ck2"
                    android:layout_marginStart="20dp"
                    android:text="@string/android"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ck3"
                    android:layout_marginStart="20dp"
                    android:text="@string/ios"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:id="@+id/r5"
                android:layout_below="@+id/r4"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dob1_tx"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/dop"
                    android:textColor="#A1887F"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Date Of Birth"
                    android:focusable="false"
                    android:hint="@string/dob"
                    android:inputType="date"
                    android:textColorHint="#8D6E63"
                    tools:ignore="TouchTargetSizeCheck"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_btn"
                android:layout_below="@+id/r5"
                android:layout_centerHorizontal="true"
                android:text="@string/submit"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>